# crossbar

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pylintrc  .readthedocs.yaml  .travis-deploy.sh  .travis.yml  BUGFIX-CALLER-DISCONNECT.md  BUGFIX-STALE-PLACEMENTS.md  CONTRIBUTING.md  COPYRIGHT  DEVELOPERS.md  DOCKER.md  DOCUMENTATION.md  Dockerfile  Dockerfile.quantivly-custom  Dockerfile.working  FIXES_SUMMARY.md  Justfile  LEGAL.md  LICENSE  LICENSE-FOR-API  LICENSES-OSS  MANIFEST.in  MASTER-NODE-API.md  MODERNIZATION.md  MODERNIZATION_REVIEW.md  Makefile  NEWS.md  NEWS.rst  PROXY_STARTUP_RACE_CONDITION.md  README.md  README.rst  REFACTORING-proxy-principals.md  RLINK_FORWARDING_FIX.md  build-docker.sh  build.sh  cloc.def  crossbar.json  (+28 more)
.audit/: RecordEvolution_master.md  oberstet_modernization-phase-12.md  oberstet_modernization-phase-13.md  oberstet_modernization-phase-14.md  oberstet_modernization-take1.md
.github/: copilot-instructions.md
.github/workflows/: codeql-analysis.yml  deploy-docs.yml  deploy-wheels.yml  deploy-wheels.yml.orig  deploy.yml  docker.yml  main.yml  release.yml  test-management.yml
crossbar/: .coveragerc  .gitignore  COPYRIGHT  LEGAL  LICENSES-OSS  MANIFEST.in  Makefile  README.md  __init__.py  __main__.py  _compat.py  _interfaces.py  _log_categories.py  _logging.py  _util.py  _version.py  ez_setup.py  foobar.py  interfaces.py  personality.py  setup.py  test_reload.py  timeservice.py  tox.ini
crossbar/common/: checkconfig.py  fswatcher.py  key.py  monitor.py  process.py  processinfo.py  profiler.py  reloader.py
crossbar/controller/: 823.bugfix  cli.py  guest.py  management.py  native.py  node.py  personality.py  process.py  processtypes.py  template.py
crossbar/crossbar/: __init__.py  _version.py  choosereactor.py  cli.py  clientfilter.py  database.py  dbexport.py  dbimport.py  logger.py  main.py  platform.py  service.py  servicefactory.py  tlsctx.py  txutil.py
crossbar/edge/: __init__.py  personality.py
crossbar/functest_helpers/: auth.py  shutdown_test.py
crossbar/keys/: crossbar-17-1.pub  crossbar-17-12.pub  crossbar-17-2.pub  crossbar-17-2.sec  crossbar-17-4.pub  crossbar-17.8.pub  crossbar-18-3.pub
crossbar/master/: __init__.py  personality.py
crossbar/moo/: mega.py
crossbar/network/: __init__.py  _api.py  _authenticator.py  _backend.py  _error.py  _mailgw.py  _util.py  _web.py  personality.py
crossbar/newsfragments/: 1075.feature  1096.bugfix  1105.bugfix  1197.feature  1474.enhancement  1531.enhancement  604.bugfix  638.bugfix  702.bugfix  710.bugfix  717.bugfix  719.bugfix  720.feature  728.bugfix  732.feature  737.feature  766.bugfix  772.feature  778.feature  780.feature  789.feature  805.removal  853.bugfix  873.bugfix  895.bugfix
crossbar/node/: cli.py  controller.py  guest.py  main.py  native.py  node.py  template.py  worker.py
crossbar/quickstart/: __init__.py  main.py  quickstartvenv.py
crossbar/router/: __init__.py  auth.py  broker.py  cookiestore.py  dealer.py  interface.py  inventory.py  longpoll.py  metering.py  observation.py  pmatcher.py  protocol.py  realminventory.py  realmstore.py  role.py  router.py  service.py  session.py  unisocket.py  uplink.py  wildcard.py
crossbar/shell/: __init__.py  app.py  client.py  command.py  config.py  main.py  monitor.py  repl.py  userkey.py  util.py
crossbar/templates/: README.md
crossbar/test/: __init__.py  test_checkconfig.py  test_compat.py  test_config.json  test_config1.json  test_config1_merged.json  test_config2.json  test_config2_merged.json  test_config3.json  test_config3_merged.json  test_logger.py  test_util.py
crossbar/twisted/: endpoint.py  fileupload.py  flashpolicy.py  processutil.py  resource.py  sharedport.py  site.py  tlsctx.py
crossbar/webservice/: __init__.py  archive.py  base.py  catalog.py  flashpolicy.py  longpoll.py  misc.py  rest.py  static.py  wap.py  websocket.py  wsgi.py
crossbar/worker/: __init__.py  container.py  controller.py  main.py  process.py  proxy.py  rlink.py  router.py  testee.py  transport.py  types.py  worker.py
crossbar2/: .gitignore  Makefile  README.md  setup.py  timeservice.py
crossbarpersonality/: __init__.py  personality.py
docker/: .gitignore  Dockerfile.cpy-slim  Dockerfile.pypy-slim  Makefile  README.md  removeall.sh  versions.sh
docs/: Adding-Real-Time-to-Django-Applications.rst  Administration.rst  Anonymous-Authentication.rst  Application-Scenarios.rst  Authorization.rst  Automatic-Startup-and-Restart.rst  Basic-Concepts.rst  Basic-Registrations.rst  Basic-Subscriptions.rst  CGI-Script-Service.rst  Caller-Identification.rst  Challenge-Response-Authentication.rst  ChangeLog.rst  Compatibility-Policy.rst  Container-Configuration.rst  Contributing-FAQ.rst  Controller-Configuration.rst  Cookie-Tracking.rst  Creating-Docker-Images.rst  Crossbar-License.rst  Cryptosign-Authentication.rst  Database-Programming-with-PostgreSQL.rst  Documentation-License.rst  Dynamic-Authenticators.rst  Examples.rst  FAQ.rst  Features.rst  File-Upload-Service.rst  Flash-Policy-Transport.rst  Getting-Started.rst  Guest-Configuration.rst  HTTP-Bridge-Publisher.rst  HTTP-Bridge-Subscriber.rst  How-Registrations-Work.rst  How-Subscriptions-Work.rst  Installation-on-Linux.rst  Installation-on-Windows.rst  Installation.rst  JSON-Value-Service.rst  JavaScript-Frameworks-and-Libraries.rst  (+97 more)
docs-cfx/: DEVELOPERS.md  Documentation-License.rst  Makefile  benchmarks.rst  conf.py  contents.rst  docker-compose.yml  readthedocs-environment.yml  security_hardening.rst
docs-old/: test_server.py
example/: .gitignore  index.html
legal/: README.md  contributors.md  contributors_cb_tech.md  contributors_tavendo.md  management_api.md  new_procedure.md
pymqtt/: _events.py  protocol.py  test_events.py  test_protocol.py  tx.py
rtd/: Makefile  conf.py  index.rst
snap/: snapcraft.yaml
test/: Makefile  docker-compose.yml  docker-integration.md  run_crossbar.py  test_ab_examples.sh  test_cli.sh  test_cli_0.sh  test_cli_1.sh  test_cli_2.sh  test_cli_3.sh  test_imports.py  test_setup.sh
v1/: .gitignore  setup.py
(+1933 files in other folders)
