[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crossbar"
version = "25.11.1"
description = "Crossbar.io multi-protocol (WAMP/WebSocket, REST/HTTP, MQTT) application router for microservices."
readme = "README.rst"
requires-python = ">=3.11"
license = {text = "European Union Public Licence 1.2 (EUPL 1.2)"}
authors = [
    {name = "typedef int GmbH"}
]
keywords = [
    "crossbar", "router", "autobahn", "autobahn.ws", "websocket", "realtime",
    "rfc6455", "wamp", "rpc", "pubsub", "oracle", "postgres", "postgresql"
]
classifiers = [
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Environment :: Console",
    "Framework :: Twisted",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Communications",
    "Topic :: Database",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
]

dependencies = [
    # WAMP ecosystem packages (using currently available PyPI versions)
    # NOTE: For development/testing with unreleased versions, use: pip install -e .[dev,dev-latest]
    "autobahn[twisted,encryption,compress,serialization,scram]>=25.10.2",
    "txaio>=25.9.2",  # Will be bumped to >=25.10.2 when published
    "zlmdb>=25.10.2",
    "cfxdb>=23.12.1",  # Will be bumped to >=25.11.1 when published

    # NOTE: wamp-xbr is not on PyPI yet - use [dev-latest] for testing

    # Twisted ecosystem
    "twisted[tls,conch,http2]>=22.10.0; sys_platform != 'darwin' and sys_platform != 'win32'",
    "twisted[tls,conch,http2,osx_platform]>=22.10.0; sys_platform == 'darwin'",
    "twisted[tls,conch,http2,windows_platform]>=22.10.0; sys_platform == 'win32'",
    "treq>=22.2.0",
    "txtorcon>=22.0.0",

    # Ethereum/XBR stack
    "eth-abi>=5.1.0,<5.2.0",
    "eth-account>=0.13.0",
    "eth-typing>=5.0.1",
    "py-eth-sig-utils>=0.4.0",
    "hexbytes>=0.3.0",

    # IPFS/IPLD (using upstream versions)
    # NOTE: py-cid and py-multihash temporarily removed due to dependency conflicts
    # py-cid 0.3.1 (latest on PyPI) requires base58<2.0 which conflicts with base58>=2.1.1
    # These can be installed manually if needed for XBR features
    # "py-cid>=0.3.1",
    # "py-multihash>=2.0.1",

    # HTTP/2 dependencies (with version constraints for Twisted compatibility)
    "h2>=3.2.0,<4.0.0",
    "hyperframe>=5.2.0,<6.0.0",
    "priority>=1.3.0,<2.0",

    # Core dependencies
    "attrs>=22.2.0",
    "base58>=2.1.1",
    "bcrypt>=4.0.1",
    "bitstring>=4.0.1",
    "cbor2>=5.4.6",
    "click>=8.1.3",
    "colorama>=0.4.6",
    "constantly>=15.1.0",
    "cookiecutter>=2.1.1",
    "cryptography>=39.0.0",
    "docker>=6.0.1",
    "flask>=2.2.2",
    "humanize>=4.4.0",
    "idna>=2.5,<2.6",
    "importlib-resources>=5.10.2",
    "incremental>=22.10.0",
    "iso8601>=1.1.0",
    "jinja2>=3.1.2",
    "jinja2-highlight>=0.6.1",
    "jsonschema>=4.0.0",
    "lmdb>=1.4.0",
    "MarkupSafe>=2.1.2",
    "mistune>=2.0.4",
    "morphys>=1.0",
    "netaddr>=0.8.0",
    "numpy>=1.24.1",
    "parsimonious>=0.9.0,<0.11.0",
    "passlib>=1.7.4",
    "prompt-toolkit>=3.0.36",
    "psutil>=5.9.4",
    "py-ubjson>=0.16.1",
    "pyasn1>=0.4.8",
    "pyasn1-modules>=0.2.8",
    "pycryptodome>=3.16.0",
    "pygments>=2.14.0",
    "pynacl>=1.5.0",
    "pyopenssl>=23.0.0",
    "pyqrcode>=1.2.1",
    "pytrie>=0.4.0",
    "pyyaml>=6.0",
    "requests>=2.28.2",
    "sdnotify>=0.3.2",
    "service-identity>=21.1.0",
    "setproctitle>=1.3.2",
    "setuptools>=67.2.0",
    "six>=1.16.0",
    "sortedcontainers>=2.4.0",
    "stringcase>=1.2.0",
    "tabulate>=0.9.0",
    "u-msgpack-python>=2.7.2",
    "ujson>=5.7.0",
    "urllib3>=1.26.14,<1.27",
    "validate-email>=1.3",
    "watchdog>=2.2.1",
    "werkzeug>=2.2.2",
    "wsaccel>=0.6.4; platform_python_implementation=='CPython'",
    "zope.interface>=5.5.2",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    # Documentation
    "sphinx>=6.1.3",
    "sphinxcontrib-images>=0.9.4",
    "sphinxcontrib-spelling>=7.3.2",
    "pygments>=2.11.2",
    "pyenchant>=3.2.2",
    "pip-licenses>=3.5.3",
    "pandoc>=2.1",
    "nbsphinx>=0.8.8",
    "sphinx-autodoc-typehints>=1.17.0",
    "jinja2>=3.1.2",
    "humanize>=4.0.0",

    # Testing
    "pytest>=7.2.1",
    "tap.py",
    "pytest-tap",
    "pytest-cov",
    "pytest-twisted",
    "tox>=4.2.8",
    "mock",

    # Code quality (using ruff instead of yapf+flake8)
    "ruff>=0.1.0",
    "mypy>=1.0.0; platform_python_implementation != 'PyPy'",
    "bandit",

    # Build tools
    "build>=1.0.0",
    "setuptools>=67.2.0",
    "wheel",
    "twine",
    "hashin",

    # Package management
    "pip>=23.0",

    # Other tools
    "pyinstaller>=4.2",
]

# For testing with unreleased WAMP packages from GitHub master branches
# Usage: pip install -e .[dev,dev-latest]
# This installs the latest development versions from GitHub instead of PyPI
# NOTE: wamp-xbr excluded for now (setup.py bug fix not yet on GitHub, use dev-local instead)
dev-latest = [
    "txaio @ git+https://github.com/crossbario/txaio.git@master",
    "autobahn[twisted,encryption,compress,serialization,scram] @ git+https://github.com/crossbario/autobahn-python.git@master",
    "zlmdb @ git+https://github.com/crossbario/zlmdb.git@master",
    "cfxdb @ git+https://github.com/crossbario/cfxdb.git@master",
    # "wamp-xbr @ git+https://github.com/wamp-proto/wamp-xbr.git@master",  # Excluded - setup.py needs fix on GitHub
]

# For testing with locally editable WAMP packages (cross-repo development)
# Usage: First install WAMP packages in editable mode from local checkouts,
#        then: pip install -e .[dev,dev-local]
# Assumes local repos are checked out in ../txaio, ../autobahn-python, etc.
# Use the justfile recipe: just install-dev-local
dev-local = [
    # Empty - local editable installs are handled by justfile recipe
]

[project.urls]
Homepage = "https://crossbar.io"
Documentation = "https://crossbar.io/docs/"
Repository = "https://github.com/crossbario/crossbar"
Issues = "https://github.com/crossbario/crossbar/issues"
Forum = "https://crossbar.discourse.group/"

[project.scripts]
crossbar = "crossbar:run"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["crossbar*"]
exclude = ["tests*", "docs*", "docs-cfx*", "docs-old*", "legal*"]

# Ruff configuration (replaces yapf + flake8)
[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E721",  # type() comparison instead of isinstance() - deliberate style choice
    "E402",  # module level import not at top (intentional in some files)
]

[tool.ruff.lint.per-file-ignores]
"crossbar/shell/reflection/*" = ["ALL"]
"crossbar/master/database/*" = ["ALL"]
"crossbar/worker/test/examples/syntaxerror.py" = ["ALL"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["crossbar"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Coverage configuration
[tool.coverage.run]
source = ["crossbar"]
omit = ["*/tests/*", "*/test_*.py", "*/test/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Towncrier configuration (preserve existing)
[tool.towncrier]
package = "crossbar"
package_dir = "."
filename = "NEWS.rst"
